// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/suggestion/search_channel_suggestion should match snapshot 1`] = `
<SuggestionContainer
  currentUserId="userid1"
  isSelection={false}
  item={
    Object {
      "create_at": 0,
      "creator_id": "id",
      "delete_at": 0,
      "display_name": "name",
      "group_constrained": false,
      "header": "header",
      "id": "channel_id",
      "last_post_at": 0,
      "last_root_post_at": 0,
      "name": "DN",
      "purpose": "purpose",
      "scheme_id": "id",
      "team_id": "team_id",
      "type": "O",
      "update_at": 0,
    }
  }
  matchedPretext=""
  onClick={[MockFunction]}
  onMouseMove={[MockFunction]}
  teammateIsBot={false}
  term=""
>
  <span
    className="suggestion-list__icon suggestion-list__icon--large"
  >
    <i
      className="icon icon--standard icon--no-spacing icon-globe"
    />
  </span>
  <div
    className="suggestion-list__ellipsis"
  >
    <span
      className="suggestion-list__main"
    >
      name
    </span>
    ~DN
  </div>
</SuggestionContainer>
`;

exports[`components/suggestion/search_channel_suggestion should match snapshot, channel type DM_CHANNEL 1`] = `
<SuggestionContainer
  currentUserId="userid1"
  isSelection={true}
  item={
    Object {
      "create_at": 0,
      "creator_id": "id",
      "delete_at": 0,
      "display_name": "name",
      "group_constrained": false,
      "header": "header",
      "id": "channel_id",
      "last_post_at": 0,
      "last_root_post_at": 0,
      "name": "DN",
      "purpose": "purpose",
      "scheme_id": "id",
      "team_id": "team_id",
      "type": "D",
      "update_at": 0,
    }
  }
  matchedPretext=""
  onClick={[MockFunction]}
  onMouseMove={[MockFunction]}
  teammateIsBot={false}
  term=""
>
  <Memo(Avatar)
    size="sm"
    url="/api/v4/users/DN/image?_=0"
  />
  <div
    className="suggestion-list__ellipsis"
  >
    <span
      className="suggestion-list__main"
    >
      @name
    </span>
  </div>
</SuggestionContainer>
`;

exports[`components/suggestion/search_channel_suggestion should match snapshot, channel type GM_CHANNEL 1`] = `
<SuggestionContainer
  currentUserId="userid1"
  isSelection={true}
  item={
    Object {
      "create_at": 0,
      "creator_id": "id",
      "delete_at": 0,
      "display_name": "name",
      "group_constrained": false,
      "header": "header",
      "id": "channel_id",
      "last_post_at": 0,
      "last_root_post_at": 0,
      "name": "DN",
      "purpose": "purpose",
      "scheme_id": "id",
      "team_id": "team_id",
      "type": "G",
      "update_at": 0,
    }
  }
  matchedPretext=""
  onClick={[MockFunction]}
  onMouseMove={[MockFunction]}
  teammateIsBot={false}
  term=""
>
  <span
    className="suggestion-list__icon suggestion-list__icon--large"
  >
    <div
      className="status status--group"
    >
      G
    </div>
  </span>
  <div
    className="suggestion-list__ellipsis"
  >
    <span
      className="suggestion-list__main"
    >
      @name
    </span>
  </div>
</SuggestionContainer>
`;

exports[`components/suggestion/search_channel_suggestion should match snapshot, channel type OPEN_CHANNEL 1`] = `
<SuggestionContainer
  currentUserId="userid1"
  isSelection={true}
  item={
    Object {
      "create_at": 0,
      "creator_id": "id",
      "delete_at": 0,
      "display_name": "name",
      "group_constrained": false,
      "header": "header",
      "id": "channel_id",
      "last_post_at": 0,
      "last_root_post_at": 0,
      "name": "DN",
      "purpose": "purpose",
      "scheme_id": "id",
      "team_id": "team_id",
      "type": "O",
      "update_at": 0,
    }
  }
  matchedPretext=""
  onClick={[MockFunction]}
  onMouseMove={[MockFunction]}
  teammateIsBot={false}
  term=""
>
  <span
    className="suggestion-list__icon suggestion-list__icon--large"
  >
    <i
      className="icon icon--standard icon--no-spacing icon-globe"
    />
  </span>
  <div
    className="suggestion-list__ellipsis"
  >
    <span
      className="suggestion-list__main"
    >
      name
    </span>
    ~DN
  </div>
</SuggestionContainer>
`;

exports[`components/suggestion/search_channel_suggestion should match snapshot, channel type PRIVATE_CHANNEL 1`] = `
<SuggestionContainer
  currentUserId="userid1"
  isSelection={true}
  item={
    Object {
      "create_at": 0,
      "creator_id": "id",
      "delete_at": 0,
      "display_name": "name",
      "group_constrained": false,
      "header": "header",
      "id": "channel_id",
      "last_post_at": 0,
      "last_root_post_at": 0,
      "name": "DN",
      "purpose": "purpose",
      "scheme_id": "id",
      "team_id": "team_id",
      "type": "P",
      "update_at": 0,
    }
  }
  matchedPretext=""
  onClick={[MockFunction]}
  onMouseMove={[MockFunction]}
  teammateIsBot={false}
  term=""
>
  <span
    className="suggestion-list__icon suggestion-list__icon--large"
  >
    <i
      className="icon icon--standard icon--no-spacing icon-lock-outline"
    />
  </span>
  <div
    className="suggestion-list__ellipsis"
  >
    <span
      className="suggestion-list__main"
    >
      name
    </span>
    ~DN
  </div>
</SuggestionContainer>
`;

exports[`components/suggestion/search_channel_suggestion should match snapshot, isSelection is false 1`] = `
<SuggestionContainer
  currentUserId="userid1"
  isSelection={false}
  item={
    Object {
      "create_at": 0,
      "creator_id": "id",
      "delete_at": 0,
      "display_name": "name",
      "group_constrained": false,
      "header": "header",
      "id": "channel_id",
      "last_post_at": 0,
      "last_root_post_at": 0,
      "name": "DN",
      "purpose": "purpose",
      "scheme_id": "id",
      "team_id": "team_id",
      "type": "O",
      "update_at": 0,
    }
  }
  matchedPretext=""
  onClick={[MockFunction]}
  onMouseMove={[MockFunction]}
  teammateIsBot={false}
  term=""
>
  <span
    className="suggestion-list__icon suggestion-list__icon--large"
  >
    <i
      className="icon icon--standard icon--no-spacing icon-globe"
    />
  </span>
  <div
    className="suggestion-list__ellipsis"
  >
    <span
      className="suggestion-list__main"
    >
      name
    </span>
    ~DN
  </div>
</SuggestionContainer>
`;

exports[`components/suggestion/search_channel_suggestion should match snapshot, isSelection is true 1`] = `
<SuggestionContainer
  currentUserId="userid1"
  isSelection={true}
  item={
    Object {
      "create_at": 0,
      "creator_id": "id",
      "delete_at": 0,
      "display_name": "name",
      "group_constrained": false,
      "header": "header",
      "id": "channel_id",
      "last_post_at": 0,
      "last_root_post_at": 0,
      "name": "DN",
      "purpose": "purpose",
      "scheme_id": "id",
      "team_id": "team_id",
      "type": "O",
      "update_at": 0,
    }
  }
  matchedPretext=""
  onClick={[MockFunction]}
  onMouseMove={[MockFunction]}
  teammateIsBot={false}
  term=""
>
  <span
    className="suggestion-list__icon suggestion-list__icon--large"
  >
    <i
      className="icon icon--standard icon--no-spacing icon-globe"
    />
  </span>
  <div
    className="suggestion-list__ellipsis"
  >
    <span
      className="suggestion-list__main"
    >
      name
    </span>
    ~DN
  </div>
</SuggestionContainer>
`;
